# dualq_kinematics

./: .gitignore  CMakeLists.txt  Doxyfile  README.md  package.xml
include/dualq_kinematics/: DualQuaternion.h  DualQuaternion.tpp  FrankaKinSolver.h  FrankaKinSolver.tpp  PadenKahan.h  PadenKahan.tpp  ScrewCoordinates.h  ScrewCoordinates.tpp  dualq_kinematics.h
launch/: dualq_kinematics_demo.launch.py
src/: DualQuaternion.tpp  dualq_kinematics.cpp  dualq_kinematics_demo.cpp
test/: DualQuaternionTest.cpp  FrankaKinSolverTest.cpp  FrankaKinSolverUnitTest.cpp  PadenKahanTest.cpp  ScrewCoordinatesTest.cpp
test/config/: panda-dualq-test.yaml
test/launch/: FrankaKinSolver.test.py  ScrewCoordinates.test.py
