<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>dualq_kinematics</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="thomas@todo.todo">thomas</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- Core ROS 2 -->
  <depend>rclcpp</depend>
  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>

  <depend>moveit_common</depend>
  <depend>moveit_core</depend>
  <depend>moveit_msgs</depend>
  <depend>robot_model_loader</depend> <!-- RobotModelLoader -->

  <depend>eigen</depend>
  
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <test_depend>ament_cmake_gtest</test_depend>

  <test_depend>ament_cmake_ros</test_depend>
  <test_depend>launch</test_depend>
  <test_depend>launch_ros</test_depend>
  <test_depend>launch_testing</test_depend>
  <test_depend>launch_testing_ament_cmake</test_depend>
  <test_depend>rclpy</test_depend>

  <!-- Panda Robot -->
  <test_depend>moveit_resources_panda_description</test_depend>
  <test_depend>moveit_resources_panda_moveit_config</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
